# kakuteipoint

./: pyproject.toml  readme.md
src/kakuteipoint/: __main__.py  kakuteipoint.py
