[project]
name = "kakuteipoint"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "n", email = "admin@users.noreply.github.com" }
]
dependencies = []
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120

[tool.ruff]
ignore = ['E501', 'E741']
select = ['E', 'F', 'W', 'I']

[tool.ruff.isort]
combine-as-imports = true
